k8s/infrastructure/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: config
          configMap:
            name: online-store-keycloak-realm
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.7
          ports:
            - containerPort: 8080
          args:
            - "start-dev"
            - "--import-realm"
          volumeMounts:
            - mountPath: /opt/keycloak/data/import
              name: config
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
  selector:
    app: keycloak
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  rules:
    - host: keycloak.online.store.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-svc
                port:
                  name: http
